Update SaneCrafting.java